Remove WidthError and fix winner banner width on mobile

--- a/src/assets/css/index_mobile.css
+++ b/src/assets/css/index_mobile.css
@@ -42,6 +42,10 @@
     padding: 5px;
   }
 
+  .you-win {
+    width: 100%;
+  }
+
 }
 
 
